<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/control_meter_top"
        layout="@layout/control_head" />

    <com.jmesh.appbase.ui.widget.MyToggleButton
        android:id="@+id/control_meter_switch"
        android:layout_width="@dimen/dp_78"
        android:layout_height="@dimen/dp_36"
        android:layout_marginLeft="@dimen/dp_49"
        android:layout_marginTop="@dimen/dp_19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/control_meter_top"
        app:slide_color="#84C7EE"
        app:stroke_color="#46628F"
        app:stroke_wide="1px"
        app:switch_on_color="@color/black_50"
        app:switch_off_color="@color/transparent"
        app:switch_off_text="@string/control_switch_off"
        app:switch_off_text_color="#43628F"
        app:switch_on_text="@string/control_switch_on"
        app:switch_on_text_color="#43628F"
        app:switch_text_size="16sp"  />

    <TextView
        android:id="@+id/control_meter_refresh_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_49"
        android:background="@drawable/bg_scan_refresh_button"
        android:paddingBottom="@dimen/dp_7"
        android:paddingLeft="@dimen/dp_18"
        android:paddingRight="@dimen/dp_19"
        android:paddingTop="@dimen/dp_7"
        android:text="@string/refresh"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="@id/control_meter_switch"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/control_meter_switch" />
</android.support.constraint.ConstraintLayout>