<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/air_conditioner_mode_bn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/air_conditioner_mode"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/air_conditioner_speed_bn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/air_conditioner_speed_bn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_conditioner_speed"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/air_conditioner_mode_bn"
        app:layout_constraintLeft_toRightOf="@id/air_conditioner_mode_bn"
        app:layout_constraintTop_toTopOf="@id/air_conditioner_mode_bn" />

    <TextView
        android:id="@+id/air_conditioner_direction_bn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_conditioner_dirction"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/air_conditioner_mode_bn"
        app:layout_constraintLeft_toRightOf="@id/air_conditioner_speed_bn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/air_conditioner_mode_bn" />

    <View
        android:id="@+id/air_conditioner_division"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_eeeeee"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_conditioner_mode_bn" />

    <com.jmesh.appbase.ui.widget.JmeshDraweeView
        android:id="@+id/air_conditioner_temperature_minus_bn"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="@id/air_conditioner_temperature_txt"
        app:layout_constraintRight_toLeftOf="@id/air_conditioner_temperature_txt"
        app:layout_constraintTop_toTopOf="@id/air_conditioner_temperature_txt"
        app:placeholderImage="@mipmap/icon_air_conditioner_minus" />

    <TextView
        android:id="@+id/air_conditioner_temperature_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_46"
        android:text="@string/air_conditioner_temperature"
        android:textColor="#4A4A4A"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/air_conditioner_division" />

    <com.jmesh.appbase.ui.widget.JmeshDraweeView
        android:id="@+id/air_conditioner_temperature_plus_bn"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        app:layout_constraintBottom_toBottomOf="@id/air_conditioner_temperature_txt"
        app:layout_constraintLeft_toRightOf="@id/air_conditioner_temperature_txt"
        app:layout_constraintTop_toTopOf="@id/air_conditioner_temperature_txt"
        app:placeholderImage="@mipmap/icon_air_conditioner_plus" />
</android.support.constraint.ConstraintLayout>