<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/solid_white_corner_5">


    <com.jmesh.appbase.ui.widget.JmeshDraweeView
        android:id="@+id/dlg_wind_strength_low_icon"
        style="@style/choose_icon_style"
        android:layout_marginTop="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dlg_wind_strength_mid_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderImage="@mipmap/icon_airconditioner_wind_strength_low_pressed" />

    <TextView
        android:id="@+id/dlg_wind_strength_low_text"
        style="@style/choose_mode_text_style"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/wind_strength_low"
        app:layout_constraintLeft_toLeftOf="@id/dlg_wind_strength_low_icon"
        app:layout_constraintRight_toRightOf="@id/dlg_wind_strength_low_icon"
        app:layout_constraintTop_toBottomOf="@id/dlg_wind_strength_low_icon" />

    <com.jmesh.appbase.ui.widget.JmeshDraweeView
        android:id="@+id/dlg_wind_strength_mid_icon"
        style="@style/choose_icon_style"
        app:layout_constraintBottom_toBottomOf="@id/dlg_wind_strength_low_icon"
        app:layout_constraintLeft_toRightOf="@id/dlg_wind_strength_low_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/dlg_wind_strength_low_icon"
        app:placeholderImage="@mipmap/icon_airconditioner_wind_strength_mid_pressed" />

    <TextView
        android:id="@+id/dlg_wind_strength_mid_text"
        style="@style/choose_mode_text_style"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/wind_strength_mid"
        app:layout_constraintLeft_toLeftOf="@id/dlg_wind_strength_mid_icon"
        app:layout_constraintRight_toRightOf="@id/dlg_wind_strength_mid_icon"
        app:layout_constraintTop_toBottomOf="@id/dlg_wind_strength_mid_icon" />

    <com.jmesh.appbase.ui.widget.JmeshDraweeView
        android:id="@+id/dlg_wind_strength_high_icon"
        style="@style/choose_icon_style"
        android:layout_marginTop="@dimen/dp_26"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dlg_wind_strength_auto_icon"
        app:layout_constraintTop_toBottomOf="@id/dlg_wind_strength_low_text"
        app:placeholderImage="@mipmap/icon_airconditioner_wind_strength_high_pressed" />

    <TextView
        android:id="@+id/dlg_wind_strength_high_text"
        style="@style/choose_mode_text_style"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/wind_strength_high"
        app:layout_constraintLeft_toLeftOf="@id/dlg_wind_strength_high_icon"
        app:layout_constraintRight_toRightOf="@id/dlg_wind_strength_high_icon"
        app:layout_constraintTop_toBottomOf="@id/dlg_wind_strength_high_icon" />

    <com.jmesh.appbase.ui.widget.JmeshDraweeView
        android:id="@+id/dlg_wind_strength_auto_icon"
        style="@style/choose_icon_style"
        app:layout_constraintBottom_toBottomOf="@id/dlg_wind_strength_high_icon"
        app:layout_constraintLeft_toRightOf="@id/dlg_wind_strength_high_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/dlg_wind_strength_high_icon"
        app:placeholderImage="@mipmap/icon_airconditioner_wind_strength_auto_pressed" />

    <TextView
        android:id="@+id/dlg_wind_strength_auto_text"
        style="@style/choose_mode_text_style"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/auto"
        app:layout_constraintLeft_toLeftOf="@id/dlg_wind_strength_auto_icon"
        app:layout_constraintRight_toRightOf="@id/dlg_wind_strength_auto_icon"
        app:layout_constraintTop_toBottomOf="@id/dlg_wind_strength_auto_icon" />
</android.support.constraint.ConstraintLayout>
